<resources>
    <string name="app_name">Shree Depa Jain Mahajan Trust</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Shree Depa Jain Mahajan Trust</string>
    <string name="nav_header_subtitle">www.panjodepa.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <!--    <string name="action_settings">Settings</string>-->
    <string name="action_profile">Profile</string>
    <string name="action_about">About</string>

    <string name="menu_home">Home</string>
    <string name="menu_latest">Latest</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_about">About</string>
    <string name="menu_directory">Directory</string>
    <string name="menu_news">Latest</string>
    <string name="menu_todays">Today</string>
    <string name="menu_activity">Samiti</string>
    <string name="menu_blogs">Blogs</string>
    <string name="menu_business">Business</string>
    <string name="menu_Jobs">Jobs</string>
    <string name="menu_gallery">Photo Gallery</string>
    <string name="menu_gallery_video">Video Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_matrimonial">Sagpan Setu</string>
    <string name="menu_contactus">Contact Us</string>
    <string name="menu_login">Login</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="memberNo">Member No</string>
    <string name="hName">Husband Name</string>
    <string name="fName">Father Name / Husband Name</string>
    <string name="gfName">Grand Father Name</string>
    <string name="sName">Surname</string>
    <string name="add">Address</string>
    <string name="village">Village</string>
    <string name="business">Company / Shop Name</string>
    <string name="description">Description</string>
    <string name="website">Website</string>
    <string name="fb">Facebook Link</string>
    <string name="insta">Instagram Link</string>
    <string name="twitter">Twitter Link</string>
    <string name="email">Email</string>

    <!-- error list -->
    <string name="err_msg_user">Enter correct username</string>
    <string name="err_msg_pass">Enter correct passord</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="blog">On this organization, the Pro-Chancellor of the University, Ms Rashmi Mittal said: "Our University strongly believes in its responsibility towards the society. \nKeeping in line with this philosophy, each and every student and employee carries the baton of community conscientiousness.\n As such, they have come forward to donate blood to set example for the others. She further added: "Donating Blood is contribution to a noble cause, which any healthy individual can make. It is one of the best steps towards welfare of the community. \nThe gap in demand and supply of blood needs to be abridged."</string>

    <string name="addressf">  B-21, Empire Mahal, 806,\nDr. Ambedkar Rd. Dadar T. T., Mumbai,\nMaharashtra 400014.</string>
    <string name="name">Name</string>
    <string name="mobile">Contact Number</string>
    <string name="coming_n_soon">Coming \n Soon</string>
    <string name="contact_person">Contact Person:</string>
    <string name="contact">Contact:</string>
    <string name="blog_title">Blog Title</string>
    <string name="write_your_blog">Write Your Blog</string>
    <string name="add_blog_images">Add Blog Images</string>
    <string name="select_logo">Select Logo</string>
    <string name="submit_details">Submit Details</string>
    <string name="business_name">Business Name:</string>
    <string name="category">Category:</string>
    <string name="business_description">Business Description:</string>
    <string name="address">Address:</string>
    <string name="select_visiting_card">Select Visiting Card</string>
    <string name="select_video">Select Video</string>
    <string name="job_title">Job Title:</string>
    <string name="designation">Designation:</string>
    <string name="ctc">CTC:</string>
    <string name="no_of_opening">No. of Opening:</string>
    <string name="experiance">Experiance:</string>
    <string name="application_date">Application Date:</string>
    <string name="father_name">Father Name:</string>
    <string name="grandfather_name">Grandfather Name:</string>
    <string name="surname">Surname:</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="birth_date">Birth Date</string>
    <string name="blood_group">Blood Group:</string>
    <string name="relation">Relation:</string>
    <string name="education">Education:</string>
    <string name="occupation">Occupation:</string>
    <string name="marital_status">Marital Status:</string>
    <string name="date_of_married">Date of Married</string>
    <string name="husband_name">Husband Name:</string>
    <string name="sports">Sports:</string>
    <string name="achievment">Achievment:</string>
    <string name="person_is_alive">Person Is Alive:</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="date_of_death">Date of Death</string>
    <string name="dharmik">Dharmik:</string>
    <string name="life_insuarance_applied">Life Insuarance Applied:</string>
    <string name="medical_insuarance_applied">Medical Insuarance Applied:</string>
    <string name="sanjivini">Sanjivini:</string>
    <string name="select_photo">Select Photo</string>
    <string name="title">Title</string>
    <string name="member">Member</string>
    <string name="family_no">Family_no</string>
    <string name="fullname">Fullname</string>
    <string name="sex">Sex</string>
    <string name="live_type">Live_type</string>
    <string name="member_type">Member_type</string>
    <string name="address_2">Address_2</string>
    <string name="slug">Slug</string>
    <string name="upload_by">Upload By:</string>
    <string name="human_resource">Human Resource</string>
    <string name="member_id">Member Id</string>
    <string name="start_date">Start Date</string>
    <string name="youtube">Youtube</string>
    <string name="skype_id">Skype id</string>
    <string name="whatsapp">Whatsapp Number</string>
    <string name="subscription">Subscription</string>
    <string name="contact_number">Contact Number</string>
    <string name="depa_bombay_mahajan">Depa Bombay Mahajan</string>
    <string name="depa_office">C-202, Butterfly Building, 493, Bhavani Shankar Road, Dadar(West), Mumbai – 400028.</string>
    <string name="cheda">Shree Dhiraj Mavji Chheda : +91 982 104 5961</string>
    <string name="navin">Shree Navin (Jitu) Manilal Savla : +91 932 265 6566</string>
    <string name="depa_web">www.panjodepa.com</string>
    <string name="depa_email">shreedepa1@gmail.com</string>
    <string name="your_contact">Your Contact:</string>
    <string name="reason">Reason:</string>
    <string name="send_message">Send Message</string>
    <string name="delete_reason">Delete Reason:</string>
    <string name="search">Search</string>
    <string name="pincode">Pincode:</string>
    <string name="street">Street</string>
    <string name="update_family_details">Update Family Details</string>
    <string name="area">Area:</string>
    <string name="add_member">Add Member</string>
    <string name="edit_family_details">Edit Family Details</string>
    <string name="split_family">Split Family</string>
    <string name="merge_family">Merge Family</string>
    <string name="save_feedback">Save Feedback</string>
    <string name="submit">Submit</string>
    <string name="businesss">Business</string>
    <string name="family_tree">Family Tree</string>
    <string name="directory">Directory</string>
    <string name="jobs">Jobs</string>
    <string name="mataji">Mataji</string>
    <string name="death">Death</string>
    <string name="latest">Latest</string>
    <string name="our_donors">Our Donors</string>
    <string name="blogs">Blogs</string>
    <string name="opening">Opening</string>
    <string name="salary">Salary</string>
    <string name="show_password">Show Password</string>
    <string name="login">Login</string>
    <string name="forget_credential">Forget Credential</string>
    <string name="alternate_login">Alternate Login</string>
    <string name="skip_login">Skip Login</string>
    <string name="company_name">Company Name:</string>
    <string name="date">Date</string>
    <string name="link">link</string>
    <string name="member_details">Member Details</string>
    <string name="married_details">Married Details</string>
    <string name="middle_name">Middle Name</string>
    <string name="job_business_details">Job / Business Details</string>
    <string name="position">Position</string>
    <string name="family_profile">Family Profile</string>
    <string name="change_password">Change password</string>
    <string name="change_user_name">Change User Name</string>
    <string name="new_username">New Username</string>
    <string name="reset_user_name">Reset User Name</string>
    <string name="reset_password">Reset Password</string>
    <string name="birthday">Birthday</string>
    <string name="anniversary">Anniversary</string>
    <string name="punyatithi">Punyatithi</string>
    <string name="english">English</string>
    <string name="gujarati">ગુજરાતી</string>
    <string name="menu_donate">Donation</string>
    <string name="menu_matrimony">Sagpan Setu</string>
    <string name="menu_helpus">Sthanik Milkat</string>

    <string-array name="array_search_type">
        <item>Select Search Field</item>
        <item>Name</item>
        <item>Father / Husband Name</item>
        <item>Grand Father Name</item>
        <item>Surname</item>
        <item>Area</item>
        <item>Gender</item>
        <item>Relation</item>
        <item>Occupation</item>
        <item>Education</item>
        <item>Blood Group</item>
        <item>Business</item>
        <item>Company Name</item>
        <item>Designation</item>
        <item>Business Area</item>

    </string-array>

    <string-array name="help_for">
        <item>Property</item>
        <item>Education</item>
        <item>Medical</item>
        <item>Others</item>
    </string-array>

</resources>