<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    tools:context=".ui.business.AddBusinessFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:paddingBottom="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="Company / Shop Name: "
                android:textColor="@color/black"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/businessName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/business"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1"
                    android:text="Business Category: "
                    android:textColor="@color/black"
                    android:textSize="15dp" />

                <Spinner
                    android:id="@+id/categorySp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="Product / Service Details: "
                android:textColor="@color/black"
                android:textSize="15dp"/>

            <EditText
                android:lines="5"
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Product / Service Details"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="Website: "
                android:textColor="@color/black"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/website"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="Facebook Link: "
                android:textColor="@color/black"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/fblink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fb"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="Instagram Link: "
                android:textColor="@color/black"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/instalink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/insta"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="Twitter Link: "
                android:textColor="@color/black"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/twitterlink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/twitter"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="Skype ID: "
                android:textColor="@color/black"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/skype_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/skype_id"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="Whatsapp No.: "
                android:textColor="@color/black"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/whatsapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/whatsapp"
                android:inputType="phone"
                android:textColor="@color/black"
                android:textSize="15dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="Contact Person: "
                android:textColor="@color/black"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/contactPerson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Contact Person"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="Contact Number: "
                android:textColor="@color/black"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile"
                android:inputType="phone"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="Email: "
                android:textColor="@color/black"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="Subcription: "
                android:textColor="@color/black"
                android:textSize="15dp" />

            <Spinner
                android:id="@+id/subscriptionSp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="Address: "
                android:textColor="@color/black"
                android:textSize="15dp" />

            <EditText
                android:lines="5"
                android:id="@+id/house"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Address"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <Button
                    android:id="@+id/chooseImage"
                    android:layout_width="130dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/btnbackground"
                    android:drawableLeft="@drawable/ic_attach_file_24"
                    android:text="Select Logo"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="15dp" />

                <Button
                    android:id="@+id/chooseCard"
                    android:layout_width="130dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/btnbackground"
                    android:drawableLeft="@drawable/ic_attach_file_24"
                    android:text="Select Visiting Card"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/chooseVideo"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/btnbackground"
                    android:drawableLeft="@drawable/ic_attach_file_24"
                    android:text="Select Video"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="15dp" />

                <Button
                    android:id="@+id/pdfBt"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/btnbackground"
                    android:drawableLeft="@drawable/ic_attach_file_24"
                    android:text="Brochure"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/multiIv"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/btnbackground"
                    android:drawableLeft="@drawable/ic_attach_file_24"
                    android:text="Images"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="15dp" />
                <Button
                    android:id="@+id/mButton"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/btnbackground"
                    android:drawableLeft="@drawable/ic_done_all_24"
                    android:text="Submit Details"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="15dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>